# tally

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  wasmer.toml
.github/workflows/: pages.yml  refresh-installer-cache.yml  release.yml  wasix.yml
data/: files.toml
data/languages/: build_data.toml  config_data.toml  functional.toml  general_purpose.toml  legacy.toml  legacy_enterprise.toml  low_level.toml  markup_templates.toml  misc.toml  scripting.toml  systems.toml  text_markup.toml  web.toml
site/: index.html  install.sh  styles.css  tally.sh
site/tally/: install.sh
src/: dir.rs  language.rs  main.rs  output.rs  update.rs
src/file/: mod.rs  sink.rs
src/output/: json.rs  mod.rs  table.rs
src/update/: mod.rs  network.rs
tests/: cli.rs
