[package]
name = "tally"
version = "1.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
argue = { git = "https://github.com/jafupy/argue" }
ignore = "0.4"
memchr = "2"
regex = { version = "1", default-features = false, features = ["perf", "std"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
